--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,37 +4,8 @@
     padding: 0;
     margin: 0;
 }
-@media screen and (max-width:768px) and (orientation:portrait){
-    body{
-        background-color: #1e1e1e ;
-        font-family: sans-serif;
-        color: #a0a0a0;
-        line-height: 1.5;
-    }
-    .main-container{
-        display: grid;
-        max-width: 1200px;
-        grid-template-columns: 350px 1fr;
-        gap: 40px;
-    }
-    .sidebar{
-        height: 90vh;
-        background-color: #2a2a2a;
-        border: 1px solid #3a3a3a;
-        border-radius: 16px;
-        padding: 30px;
-        position: sticky;
-        top: 40px;
-    }
-    .main-content{
-        height: 90vh;
-        background-color: #2a2a2a;
-         border: 1px solid #3a3a3a;
-        border-radius: 16px;
-    }
-}
-@media screen and (max-width:6000px) and (orientation:landscape){
-    body{
+
+body{
         background-color: #1e1e1e ;
         font-family: sans-serif;
         color: #a0a0a0;
@@ -319,5 +290,16 @@
     .c1 a,.c2 a,.c3 a{
         text-decoration: none;
         color: #e0e0e0;
+    }
+    @media screen and (max-width:1000px){
+    
+    .main-container{
+        padding: 20px;
+        grid-template-columns: 1fr;
+    }
+    /* Side bar */
+    .sidebar{           
+        position: static;
+        height: auto;
     }
 }
